changes added to contact-us.html

--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -124,3 +124,16 @@ img{
     text-align:center;
     box-shadow: 2px 2px 3px #999;  
 }
+
+.contact-us{
+    color: teal;
+}
+
+h3{
+    color: teal;
+}
+
+.card-img-left{
+    text-align: left;
+}
+
